; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_free_note_data.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_free_note_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.note_data = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.note_data*)* @free_note_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_note_data(%struct.note_data* %0) #0 {
  %2 = alloca %struct.note_data*, align 8
  store %struct.note_data* %0, %struct.note_data** %2, align 8
  %3 = load %struct.note_data*, %struct.note_data** %2, align 8
  %4 = getelementptr inbounds %struct.note_data, %struct.note_data* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.note_data*, %struct.note_data** %2, align 8
  %9 = getelementptr inbounds %struct.note_data, %struct.note_data* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @unlink_or_warn(i64 %10)
  %12 = load %struct.note_data*, %struct.note_data** %2, align 8
  %13 = getelementptr inbounds %struct.note_data, %struct.note_data* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @free(i64 %14)
  br label %16

16:                                               ; preds = %7, %1
  %17 = load %struct.note_data*, %struct.note_data** %2, align 8
  %18 = getelementptr inbounds %struct.note_data, %struct.note_data* %17, i32 0, i32 0
  %19 = call i32 @strbuf_release(i32* %18)
  ret void
}

declare dso_local i32 @unlink_or_warn(i64) #1

declare dso_local i32 @free(i64) #1

declare dso_local i32 @strbuf_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
